--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,23 @@
 {
-    "name": "Laravel PWA",
-    "short_name": "LPT",
-    "start_url": "/",
-    "background_color": "#000000",
-    "description": "A Progressive Web Application setup for Laravel projects.",
-    "display": "fullscreen",
-    "theme_color": "#000000",
-    "icons": [
-        {
-            "src": "logo.png",
+        "name": "GConnect",
+        "short_name": "GConnect",
+        "start_url": "/",
+        "scope": "/",
+        "display": "standalone",
+        "background_color": "#0f172a",
+        "theme_color": "#58a6ff",
+        "orientation": "portrait",
+        "description": "GConnect Progressive Web App",
+        "icons": [
+            {
+            "src": "/images/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+            },
+            {
+            "src": "/images/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
-        }
-    ]
+            }
+        ] 
 }
